finish submission week 7

--- a/Week07_33738/Week07B_33738/app/src/main/AndroidManifest.xml
+++ b/Week07_33738/Week07B_33738/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Week07B_33738">
         <activity
+            android:name=".DetilVideoActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
